force-app/main/default/objects/Claim_Investigation__c/Claim_Investigation__c.object-meta.xml
<CustomObject>
    <label>Claim Investigation</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Claim Investigation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Investigations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>