force-app/main/default/objects/Claim_Investigation__c/fields/claim__c.field-meta.xml
<CustomField>
    <fullName>claim__c</fullName>
    <label>claim</label>
    <referenceTo>claim__c</referenceTo>
    <relationshipLabel>Claim Investigations</relationshipLabel>
    <relationshipName>Claim_Investigations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>