force-app/main/default/objects/Claim_Investigation__c/fields/Inveatigation_Date__c.field-meta.xml
<CustomField>
    <fullName>Inveatigation_Date__c</fullName>
    <label>Inveatigation Date</label>
    <type>Date</type>
</CustomField>