force-app/main/default/objects/Claim_Investigation__c/fields/Investigation_Stetus__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Stetus__c</fullName>
    <label>Investigation Stetus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>